clusters/apps/valkey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: cache
  labels:
    app.kubernetes.io/name: valkey
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
